--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -469,7 +469,7 @@ layers:
                 draw:
                     lines:
                         # color: [[12,[1.000,0.518,0.424]],[16,[1.000,0.564,0.312]]]
-                        color: [[9,[0.215,1.000,1.000]],[13,[0.039,0.184,0.443]],[16,[0.078,0.129,0.259]]]
+                        color: [[9,[0.215,1.000,1.000]],[11,[0.215,1.000,1.000]],[13,[0.078,0.129,0.259]]]
                         width: [[12,0px],[13,1px],[15,1.5px],[17,6px],[20,20px]]
                         outline:
                             width: 0px
@@ -494,11 +494,11 @@ layers:
                 draw:
                     lines:
                         color: [[9,[0.215,1.000,1.000]],[11,[0.215,1.000,1.000]],[13,[0.078,0.129,0.259]]]
-                        width: [[9,0px],[11,1px],[13,3px],[15,12px],[17,60px],[20,70m]]
+                        width: [[9,0px],[11,1px],[13,5px],[15,18px],[17,60px],[20,70m]]
                         outline:
                             style: runway-glow
                             color: [[9,[0.215,1.000,1.000]],[15,[0.078,0.129,0.259]]]
-                            width: [[9,2px],[12,2px],[20,12px]]
+                            width: [[9,2px],[11,3px],[12,2px],[20,12px]]
                 runway-detail:
                     filter: { $zoom: { min: 12 } }
                     draw:
