--- a/layers/transit.yaml
+++ b/layers/transit.yaml
@@ -1,10 +1,11 @@
 layers:
     transit:
         data: { source: mapzen }
-        filter: { not: { kind: [platform] }, $zoom: { min: 13 } }
+        filter: { not: { kind: [platform] } }
         draw:
             lines:
                 order: global.order
+                interactive: true
         railway:
             filter: { kind: [railway,train] }
             draw:
@@ -26,7 +27,7 @@ layers:
             #             color: [1.00,1.00,1.00]
             #             width: [[18,5px],[20,7px]]
         subway:
-            filter: { kind: subway }
+            filter: { kind: [subway,tram,light_rail] }
             draw:
                 lines:
                     style: transit-glow
@@ -34,6 +35,28 @@ layers:
                     color: [1.00,0.000,0.250]
                     # color: [0.000,0.580,0.000]
                     width: [[13,2px],[16,5px],[18,9px],[20,12px]]
+            color-light_rail:
+                filter: { kind: [light_rail] }
+                draw:
+                    lines:
+                        color: purple
+                        width: [[13,1px],[16,3px],[18,7px],[20,10px]]
+            color-tram:
+                filter: { kind: [tram] }
+                draw:
+                    lines:
+                        color: [1.,0.,0.,0.15]
+                        width: [[13,0.75px],[16,2px],[18,6px],[20,9px]]
+            early-light_rail:
+                filter: { kind: [light_rail], $zoom: { max: 11 } }
+                draw:
+                    lines:
+                        visible: false
+            early-tram:
+                filter: { kind: [tram], $zoom: { max: 12 } }
+                draw:
+                    lines:
+                        visible: false
 
 styles:
     transit-glow:
