--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -173,13 +173,10 @@ styles:
                 ZOOM_START: 11.
                 ZOOM_END: 20.
 
-                SHIMMERING_SCALE: mix(35.,10.,zoom())
                 SHIMMERING_COLOR: color.rgb
-                # SHIMMERING_BACKGROUND_COLOR: vec3(0.128,0.257,0.446)
-                # SHIMMERING_BACKGROUND_COLOR: vec3(0.092,0.101,0.145)
                 SHIMMERING_BACKGROUND_COLOR: vec3(0.03,0.05,0.07)
                 SHIMMERING_SPEED: .5
-                SHIMMERING_AMOUNT: zoom()
+                SHIMMERING_AMOUNT: .1+zoom()*.9
                 SHIMMERING_ANIMATED: global.animated
     water-boundaries-animated:
         base: lines
